[package]
name = "remote-lab"
version = "0.1.0"
edition = "2021"
description = "Personal LAN remote desktop experiment (host + viewer)"
license = "MIT OR Apache-2.0"

[package.metadata.deb]
name = "remote-host"
maintainer = "remote-lab"
copyright = "2026, remote-lab"
extended-description = "Remote desktop host for personal experiments. Streams the screen over WebSocket and accepts mouse/keyboard input."
section = "net"
priority = "optional"
depends = "$auto, libxcb1, libxrandr2, libxdo3, libdbus-1-3, libpipewire-0.3-0, libwayland-client0, libegl1"
assets = [
    ["target/release/remote-host", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/remote-host/README.md", "644"],
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.29"
egui = "0.29"
enigo = "0.2"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = "0.24"
xcap = "0.9"

[[bin]]
name = "remote-host"
path = "src/bin/host.rs"

[[bin]]
name = "remote-viewer"
path = "src/bin/viewer.rs"
